--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,27 +1,14 @@
-/****** Salutation ******/
-.salutation {
-  text-wrap: nowrap;
-  font-weight: bold;
-  font-size: xx-large;
-  text-overflow: ellipsis;
-}
+.slideBar {
+  position: fixed;
+  top: 180px;
+  bottom: 0%;
+  border-left: none;
+  border-top-right-radius: 15px;
+  transition: 0.3s linear;
+  display: flex;
+  flex-direction: column;
 
-#hand {
-  font-size: x-large;
-  display: inline-block;
-  animation: wave 1s ease-in-out infinite;
-}
-
-@keyframes wave {
-  0% {
-    transform: rotate(0deg);
-  }
-  50% {
-    transform: rotate(20deg);
-  }
-  100% {
-    transform: rotate(0deg);
-  }
+  box-shadow: 0px 7px 7px 7px rgba(0, 0, 0, 0.407);
 }
 
 .slideBarBtn span {
@@ -39,19 +26,7 @@
   transform: scale(1.3);
 }
 
-.slideBar {
-  position: fixed;
-  top: 18vh;
-  bottom: 0%;
-  border-left: none;
-  border-top-right-radius: 15px;
-  transition: 0.3s linear;
 
-  display: flex;
-  flex-direction: column;
-
-  box-shadow: 0px 7px 7px 7px rgba(0, 0, 0, 0.407);
-}
 
 .slideBar p:nth-child(1) {
   border-top-right-radius: 15px;
@@ -62,6 +37,7 @@
   font-weight: bold;
   border-bottom: 2px solid #ffffff4c;
   transition: 0.3s;
+  text-decoration: none;
 }
 
 .slideBar p:hover {
