--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,3 +1,51 @@
+#map {
+  height: 500px;
+  width: 100%;
+  z-index: 0;
+  border-radius: 15px;
+  box-shadow: 1px 1px 5px 7px rgba(153, 153, 153, 0.426);
+}
+
+#card {
+  background-color: #858585;
+  color: white;
+  width: 50%;
+  position: absolute;
+  top: 50px;
+  left: 25%;
+  z-index: 1;
+}
+
+@media screen AND (max-width: 1000px) {
+  #card {
+    width: 50%;
+    top: 50px;
+    left: 25%;
+
+  }
+}
+
+@media screen AND (max-width: 820px) {
+  #card {
+    width: 80%;
+    top: 50px;
+    left: 10%;
+  }
+}
+
+@media screen AND (max-width: 500px) {
+  #card {
+    width: 90%;
+    top: 50px;
+    left: 5%;
+    padding: 10px !important;
+  }
+
+  #card h2 {
+    font-size: large;
+  }
+}
+
 .slideBar {
   position: fixed;
   top: 180px;
@@ -7,8 +55,8 @@
   transition: 0.3s linear;
   display: flex;
   flex-direction: column;
-
   box-shadow: 0px 7px 7px 7px rgba(0, 0, 0, 0.407);
+  z-index: 100 !important;
 }
 
 .slideBarBtn span {
@@ -25,8 +73,6 @@
   background-color: rgb(26, 26, 26) !important;
   transform: scale(1.3);
 }
-
-
 
 .slideBar p:nth-child(1) {
   border-top-right-radius: 15px;
@@ -47,7 +93,7 @@
 }
 
 .logOutIcon {
-    transition: .3s;
+  transition: 0.3s;
 }
 
 .logOutIcon:hover {
@@ -56,29 +102,30 @@
 }
 
 .switchUser {
-    position: absolute;
-    text-align: center;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
-    font-size: x-small;
-    color: white;
-    font-weight: bold;
-    word-spacing: 2px;
-    letter-spacing: 0.5px;
-    transition: .5s;
-    padding: 10px 0px;
+  position: absolute;
+  text-align: center;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  font-size: x-small;
+  color: white;
+  font-weight: bold;
+  word-spacing: 2px;
+  letter-spacing: 0.5px;
+  transition: 0.5s;
+  padding: 10px 0px;
 }
 
 .switchUser:hover {
-    color: black;
-    text-decoration: none;
-
+  color: black;
+  text-decoration: none;
 }
 
-
+.Supprimer:hover {
+  text-decoration: underline;
+}
 /********************************/
-body {
+/* body {
     background-color: black;
     color:aliceblue;
-}
+} */
