--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -7,6 +7,13 @@
   background-size: cover;
 }
 
+.bg-red {
+  background: linear-gradient(to top right, #79001c, #db3153, #79001c);
+  color: white !important;
+  font-weight: bold;
+  box-shadow: 1px 1px 1px 1px rgb(255, 255, 255);
+}
+
 .btn-red {
   background: linear-gradient(to top right, #79001c, #db3153, #79001c);
   color: white;
@@ -46,9 +53,8 @@
   text-shadow: 10px 10px 10px #181818;
 }
 
-
 .h-100 {
-    height: 100vh;
+  height: 100vh;
 }
 
 .font-FugazOne {
