handle CRUD for request and accept / refuse request

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -124,6 +124,15 @@
 .Supprimer:hover {
   text-decoration: underline;
 }
+
+.carImageTD {
+  width: 70%;
+  position: absolute;
+  top: -250%;
+  left: 0px;
+  box-shadow: 0px 0px 10px 0px ;
+}
+
 /********************************/
 /* body {
     background-color: black;
