--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -21,7 +21,7 @@
     width: 50%;
     top: 50px;
     left: 25%;
-
+  
   }
 }
 
@@ -130,7 +130,61 @@
   position: absolute;
   top: -250%;
   left: 0px;
-  box-shadow: 0px 0px 10px 0px ;
+  box-shadow: 0px 0px 10px 0px;
+}
+
+.bg-test {
+  background: rgb(180, 58, 96);
+  background: linear-gradient(
+    239deg,
+    rgb(255, 179, 179) 0%,
+    rgb(255, 255, 255) 50%,
+    rgb(255, 184, 187) 100%
+  );
+}
+
+.table {
+  border-radius: 15px;
+}
+
+.table tr:first-of-type {
+  border: 1px solid rgba(0, 0, 0, 0);
+  border-bottom: 5px solid rgb(255, 205, 205);
+
+}
+
+.table tr {
+  border-bottom: 5px solid rgb(255, 216, 216);
+}
+
+.table th:first-of-type {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+
+}
+
+.table th:last-of-type{
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.table tr td{
+  background-color: white !important;
+}
+
+.table tr td:first-of-type {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+
+}
+
+.table tr td:last-of-type{
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.table tr td {
+  border: none;
 }
 
 /********************************/
