--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,9 +1,26 @@
+body {
+  background: linear-gradient(
+    239deg,
+    rgb(245, 181, 196) 0%,
+    #6d0b31db 50%,
+    rgb(227, 144, 164) 100%
+  );
+}
+
+button {
+  text-wrap: nowrap !important;
+}
+
 #map {
   height: 500px;
   width: 100%;
   z-index: 0;
   border-radius: 15px;
   box-shadow: 1px 1px 5px 7px rgba(153, 153, 153, 0.426);
+}
+
+.z-100 {
+  z-index: 100 !important;
 }
 
 #card {
@@ -21,7 +38,6 @@
     width: 50%;
     top: 50px;
     left: 25%;
-  
   }
 }
 
@@ -30,6 +46,42 @@
     width: 80%;
     top: 50px;
     left: 10%;
+  }
+}
+
+@media screen AND (max-width: 600px) {
+  .slogan1 {
+    font-size: large !important;
+    font-weight: 300 !important;
+  }
+
+  .slogan2 {
+    font-size: medium !important;
+    font-family: "Fugaz One", serif;
+    font-weight: 100 !important;
+  }
+
+  #header {
+    flex-direction: column;
+    justify-content: center !important;
+    align-items: center !important;
+    padding: 0px !important;
+    padding-top: 0px !important;
+    gap: 5px !important;
+  }
+
+  #header .authBtns {
+    width: 100% !important;
+    justify-content: center !important;
+  }
+
+  #header .authBtns button {
+    width: 40%;
+  }
+
+  #header .logo img {
+    height: 100% !important;
+    width: 120px !important;
   }
 }
 
@@ -43,6 +95,17 @@
 
   #card h2 {
     font-size: large;
+  }
+
+  nav {
+    padding: 20px 0px !important;
+    flex-direction: column;
+    height: 30vh !important;
+  }
+
+  .btn-red {
+    font-size: smaller;
+    text-align: center;
   }
 }
 
@@ -89,7 +152,6 @@
 .slideBar p:hover {
   background-color: #c72f3e;
   font-size: larger;
-  color: black !important;
 }
 
 .logOutIcon {
@@ -133,62 +195,39 @@
   box-shadow: 0px 0px 10px 0px;
 }
 
-.bg-test {
-  background: rgb(180, 58, 96);
+.bgc {
   background: linear-gradient(
     239deg,
     rgb(255, 179, 179) 0%,
-    rgb(255, 255, 255) 50%,
+    rgb(250, 239, 241) 50%,
     rgb(255, 184, 187) 100%
   );
 }
 
-.table {
+.diagonal-background {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(to top right, #79001c, #db3153, #79001c);
+  overflow: hidden;
+}
+
+.diagonal-background::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to left, #e8e7e7, #fffffff2, #e8e7e7);
+  clip-path: polygon(100% 0, 100% 100%, 0 0);
+}
+
+.main {
+  border: 5px solid;
+  border-color: #520d19 !important;
   border-radius: 15px;
+  padding-bottom: 100px;
+  min-height: 80vh;
+  background: white;
 }
-
-.table tr:first-of-type {
-  border: 1px solid rgba(0, 0, 0, 0);
-  border-bottom: 5px solid rgb(255, 205, 205);
-
-}
-
-.table tr {
-  border-bottom: 5px solid rgb(255, 216, 216);
-}
-
-.table th:first-of-type {
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-
-}
-
-.table th:last-of-type{
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
-
-.table tr td{
-  background-color: white !important;
-}
-
-.table tr td:first-of-type {
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-
-}
-
-.table tr td:last-of-type{
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
-
-.table tr td {
-  border: none;
-}
-
-/********************************/
-/* body {
-    background-color: black;
-    color:aliceblue;
-} */
